--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -13,30 +13,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div id="root">
-
-    </div>
-    <script>
-      (function(global){
-
-        global.onAuthorize = function (googleUser) {
-          // Useful data for your client-side scripts:
-          var profile = googleUser.getBasicProfile();
-          console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-          console.log('Full Name: ' + profile.getName());
-          console.log('Given Name: ' + profile.getGivenName());
-          console.log('Family Name: ' + profile.getFamilyName());
-          console.log("Image URL: " + profile.getImageUrl());
-          console.log("Email: " + profile.getEmail());
-
-          // The ID token you need to pass to your backend:
-          var access_token = googleUser.getAuthResponse().access_token;
-          console.log("Access Token: " + access_token);
-
-        };
-
-      }(window));
-
-    </script>
+    <div id="root"></div>
   </body>
 </html>
